# power-play

./: .gitignore  README.md  build.dependencies.gradle  build.gradle  gradle.properties  settings.gradle
hardware-dependent/src/main/cpp/: .gitignore  CMakeLists.txt  ICM_20948.cpp  ICM_20948.h
hardware-dependent/src/main/cpp/util/: ICM_20948_DMP.h
mpc/: CMakeLists.txt  build.gradle
mpc/src/main/cpp/: interface.c  interface.h  locs.c  main.c  model.c  model.h
mpc/src/main/java/com/kuriosityrobotics/powerplay/mpc/: DriveParameters.java  OptimisationParameterBuilder.java  OptimisationParameters.java  SolutionInfo.java  SolverInput.java  SolverInputBuilder.java  SolverOutput.java  SystemState.java  TargetParameters.java  WeightParameters.java
mpc/src/main/java/com/kuriosityrobotics/powerplay/navigation/: FieldNavConstants.java  FieldNavigator.java  Junction.java  JunctionTypes.java  OneDimentionalPath.java  Path.java
mpc/src/main/python/: .gitignore  calculate_com_offset.py  derivation.py  drive_grad_descent_tune.py  drive_simulation.py  drivetrain_gym_environment.py  mecanum_data.py  optuna_tune.py  path_comparison.py  reinforcement_learning.py  requirements.txt  static_friction_tune.py
mpc/src/main/python/drive_samples/: driving_around_log_slower_1.csv  driving_around_log_slower_2.csv  driving_around_log_slower_3.csv  driving_around_log_slower_4.csv  driving_around_log_slower_5.csv  driving_around_log_slower_6.csv  driving_around_log_slower_7.csv  driving_around_log_slower_8.csv  driving_around_log_slower_9.csv  mpc_log_2.csv  mpc_log_3.csv  mpc_log_4.csv  mpc_log_5.csv  r2.csv
mpc/src/main/python/drive_samples/funny/: driving_around_log1.csv  driving_around_log2.csv  driving_around_log3.csv  driving_around_log4.csv  driving_around_log5.csv  driving_around_log6.csv  driving_around_log7.csv  r2_drive_log_1.csv  r2_drive_log_10.csv  r2_drive_log_2.csv  r2_drive_log_3.csv  r2_drive_log_4.csv  r2_drive_log_5.csv  r2_drive_log_6.csv  r2_drive_log_7.csv  r2_drive_log_8.csv  r2_drive_log_9.csv
mpc/src/main/python/drive_samples/r2/: spin.csv  x.csv  xspin.csv  xy.csv  y.csv  yspin.csv
mpc/src/main/resources/: weave.csv
mpc/src/main/resources/blue_triangle_auto/: blue_cycle_to_medium.csv  blue_cycle_to_park_1.csv  blue_cycle_to_park_2.csv  blue_cycle_to_park_3.csv  blue_cycle_to_side_high.csv  blue_start_to_cycle.csv
mpc/src/main/resources/red_triangle_auto/: red_cycle_to_medium.csv  red_cycle_to_park_1.csv  red_cycle_to_park_2.csv  red_cycle_to_park_3.csv  red_cycle_to_side_high.csv  red_start_to_cycle.csv
mpc/src/test/java/: SolverOutputTest.java
(+208 files in other folders)
